<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView_notification_chnlogo"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:src="@drawable/default_simge"
        android:contentDescription="@string/text_channel_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/imageView_notification_chnName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_channel_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/imageView_notification_playlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_playlist_name"
            android:textColor="@color/colorTextPrimary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_notification_previous"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:src="@drawable/button_previous_sc"
        android:contentDescription="@string/text_previous" />

    <ImageView
        android:id="@+id/imageView_notification_play"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/button_play"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/text_play" />

    <ImageView
        android:id="@+id/imageView_notification_next"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:src="@drawable/button_next_sc"
        android:contentDescription="@string/text_next" />

</LinearLayout>
