<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="center"
        android:onClick="handleFullScreenPlayerClick"
        app:srcCompat="@drawable/arrow_up" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_channel_name_minimize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_channel_name"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_playlist_name_minimize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_playlist_name"
            android:paddingTop="2dp"
            android:textColor="?android:attr/textColorPrimary"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/button_previous_minimize"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:onClick="handlePreviousClick"
        android:src="@drawable/button_previous_sc"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/button_play_minimize"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="handlePlayClick"
            android:src="@drawable/button_play"
            android:contentDescription="@string/text_play" />

        <ProgressBar
            android:id="@+id/progressBar_music_control_minimize"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/button_next_minimize"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/button_next_sc"
        android:onClick="handleNextClick"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"/>

</LinearLayout>